# addonfactory-test-matrix-action

./: .gitignore  .pre-commit-config.yaml  .releaserc  BYPASS_PROBE.tmp  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt  requirements_dev.txt  sc4s_sync.sh  splunk_matrix_update.py  splunk_sync.sh
.github/: dependabot.yml
.github/workflows/: main.yml  sc4s_matrix.yml  splunk_matrix.yml  test-bypass-89092.yml  update_deps.yml
addonfactory-test-matrix-action/: __init__.py
addonfactory_test_matrix_action/: __init__.py  main.py
config/: SC4S_matrix.conf  splunk_matrix.conf
docs/superpowers/plans/: 2026-06-25-splunk-auto-discovery.md
docs/superpowers/specs/: 2026-06-25-splunk-auto-discovery-design.md
tests/: test_main.py  test_splunk_matrix_update.py
