[tool.poetry]
name = "addonfactory_test_matrix_action"
version = "0.1.0"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "Apache-2.0"
include = [
    "config/*.conf"
]
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
splunk-addon-matrix-gen="addonfactory_test_matrix_action:main"
